--- a/frontend/src/app/globals.css
+++ b/frontend/src/app/globals.css
@@ -146,3 +146,30 @@ body {
 	animation-range: entry 20% cover 60%;
 	animation-fill-mode: both;
 }
+
+.exploring-grid {
+	grid-template-areas:
+		'a b c'
+		'a d c';
+}
+
+.exploring-image-1 {
+	grid-area: a;
+}
+
+.exploring-image-2 {
+	grid-area: b;
+}
+
+.exploring-image-3 {
+	grid-area: c;
+}
+
+.exploring-image-4 {
+	grid-area: d;
+}
+
+.bg-blur {
+	background: rgba(255, 255, 255, 0.2);
+	backdrop-filter: blur(5px);
+}
