--- a/frontend/src/app/globals.css
+++ b/frontend/src/app/globals.css
@@ -193,3 +193,33 @@ body {
 .fade-in-animation {
 	animation: fade-in ease 1s forwards;
 }
+
+@keyframes marquee1 {
+	0% {
+		transform: translateX(0%);
+	}
+	100% {
+		transform: translateX(-100%);
+	}
+}
+
+.marquee1-animation {
+	animation: marquee1 linear 50s infinite;
+}
+
+@keyframes marquee2 {
+	0% {
+		transform: translateX(100%);
+	}
+	100% {
+		transform: translateX(0%);
+	}
+}
+
+.marquee2-animation {
+	animation: marquee2 linear 50s infinite;
+}
+
+.shadow-marquee {
+	box-shadow: inset -150px -100px 100px -50px rgba(0, 0, 0, 0.8), inset 150px -100px 100px -50px rgba(0, 0, 0, 0.8);
+}
